src/objects/Floor__c.object
<CustomObject>
    <description>This custom object will represent a floor which belong to building (MASTER - DETAIL)</description>
    <fields>
        <fullName>Building__c</fullName>
        <description>This represents the building where the floor is located</description>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Floors</relationshipLabel>
        <relationshipName>Floors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Desk_per_Row__c</fullName>
        <description>This will hold the layout of the floor</description>
        <label>Desk per Row</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <description>This will hold the floor number</description>
        <label>Floor Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Floor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Floor Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Floors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>